fix for th not vertically aligning titles

--- a/static/logger/sass/main.sass
+++ b/static/logger/sass/main.sass
@@ -222,6 +222,8 @@ table
         background-color: $zebra_highlight
 
     th
+        display: table-cell
+        vertical-align: inherit
         text-align: left
 
     .artist_clmn, .title_clmn, .play_time_clmn, .group_clmn
